--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,5 +25,11 @@ jobs:
         uses: actions/setup-node@v3.6.0
         with: 
           node-version: 18.12.1
+          
+      - name: Instalação do Mocha e dos pacotes para teste
+        run:
+          cd src;
+          npm install -g mocha;
+          npm install
       
       
