--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,6 +52,7 @@ jobs:
           file: src/Dockerfile
           push: true
           tags:
-            evertonluiz00/conversao-temperatura:v1
+            evertonluiz00/conversao-temperatura:v${{github.run_number}}
+            evertonluiz00/conversao-temperatura:latest
       
       
