Update main.yml and description

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,5 +53,6 @@ jobs:
           push: true
           tags:
             evertonluiz00/conversao-temperatura:v${{github.run_number}}
+            evertonluiz00/conversao-temperatura:latest
       
       
